2005-06-29 Mikhail Khodjaiants
	Bug 41725: I can't set a breakpoint in a function where I used attach source.
	Bug 45514: Breakpoints made is assembly view do not show in C view.
	+ DebugMarkerAnnotationModel.java
	+ DebugMarkerAnnotationModelFactory.java
	* ToggleBreakpointAdapter.java
	* DisassemblyEditorInput.java
	* plugin.xml

2005-06-29 Mikhail Khodjaiants
	Removed unused imports.
	* CBreapointWorkbencAdapterFactory.java

2005-06-25 Alain Magloire
	Fix PR 94735: return an empty object.
	* src/org/eclipse/cdt/debug/internal/ui/CBreapointWorkbencAdapterFactory.java

2005-06-22 Mikhail Khodjaiants
	Bug 96563: "Go to file" is ghosted on breakpoints (outside projects?).
	* CDebugModelPresentation.java

2005-06-20 Mikhail Khodjaiants
	Bug 93855: Changing values in detailed pane doesn't work the first time after the view is loaded.
	+ DetailsViewerConfiguration.java
	* plugin.xml

2005-06-17 Mikhail Khodjaiants
	Bug 99217: NPE thrown when fetching deffered children.
	* CDebugModelPresentation.java

2005-06-12 Mikhail Khodjaiants
	Bug 100447: NPE generated when Run To Line in Disassembly view.
	* ResumeAtLineAdapter.java
	* RunToLineAdapter.java

2005-06-12 Mikhail Khodjaiants
	Temporary fix for bug 79872: Make instruction stepping default in disassembly view.
	* DisassemblyView.java

2005-06-10 Mikhail Khodjaiants
	Bug 84929: The "Expression to watch" field of the "Add Watchpoint" dialog is editable.
	* CDebugModelPresentation.java
	* AddWatchpointActionDelegate.java
	* AddWatchpointDialog.java
	* ToggleBreakpointAdapter.java
	* ModulesView.java

2005-06-10 Mikhail Khodjaiants
	Bug 83465: Add "Run to line" and "Resume at line" actions to the context menu of Disassembly view.
	* plugin.xml

2005-06-10 Mikhail Khodjaiants
	Bug 81353: automatically opening of the disassembly window.
	* ToggleInstructionStepModeActionDelegate.java
	* ICDebugUIConstants.java

2005-06-10 Mikhail Khodjaiants
	Warning cleanup.
	* AddExpressionEditorActionDelegate.java